# bs-winston

./: .gitignore  .npmignore  Makefile  README.md  bs-winston.opam  bsconfig.json  dune-project  package-lock.json  package.json
.github/workflows/: tests.yml
src/: Builder.re  Builder.rei  Format.re  Format.rei  Logger.re  Logger.rei  Open.re  Transport.re  Transport.rei  Winston.re  Winston.rei  dune
test/: BasicsTest.re  TestBasics.re  TestDemo.re  TestTransport.re  TestTransport.rei
